--- a/templates/Customer/login.html
+++ b/templates/Customer/login.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+      href="https://unpkg.com/swiper/swiper-bundl e.min.css"
     />
     <link
       rel="stylesheet"
