--- a/templates/Customer/otp.html
+++ b/templates/Customer/otp.html
@@ -18,10 +18,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link href="../../static/css/style.css" rel="stylesheet" />
-    <title>Login</title>
+    <title>Register</title>
   </head>
   <body onload="initGoogleAPI()">
-    <div class="container" id="container">
+    <div class="container" id="container" id="otp-form">
       <div class="toggle-container">
         <div class="swiper-container">
           <div class="swiper-wrapper">
