update OTP and  Streng password, Match password,, validateSignUp

--- a/templates/Customer/login.html
+++ b/templates/Customer/login.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundl e.min.css"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
     <link
       rel="stylesheet"
@@ -20,7 +20,7 @@
     <link href="../../static/css/style.css" rel="stylesheet" />
     <title>Login</title>
   </head>
-  <body >
+  <body>
     <div class="container" id="container">
       <div class="toggle-container">
         <div class="swiper-container">
@@ -255,12 +255,10 @@
           <h1>Sign In</h1>
           <span>Hello, Friend! Please enter your details.</span>
           <div class="social-icons">
-            <a href="#" class="icon" "
+            <a href="#" class="icon"
               ><i class="fa-brands fa-google-plus-g"></i
             ></a>
-            <a href="#" class="icon" 
-              ><i class="fa-brands fa-facebook-f"></i
-            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
           </div>
           <div class="form-item">
             <div class="left-item"></div>
@@ -306,6 +304,5 @@
     </div>
     <script src="../../static/js/script.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    
   </body>
 </html>
