--- a/templates/Customer/otp.html
+++ b/templates/Customer/otp.html
@@ -20,7 +20,7 @@
     <link href="../../static/css/style.css" rel="stylesheet" />
     <title>Register</title>
   </head>
-  <body onload="initGoogleAPI()">
+  <body>
     <div class="container" id="container" id="otp-form">
       <div class="toggle-container">
         <div class="swiper-container">
