--- a/templates/Customer/register.html
+++ b/templates/Customer/register.html
@@ -250,7 +250,7 @@
           </div>
         </div>
       </div>
-      <div class="sign-up">
+      <div class="form-container sign-up">
         <form>
           <h1>Create Account</h1>
           <div class="social-icons">
